tests/paczka1/fuzzy1/90001431.err
Error in line 8: zY6AdZGdyqX S716 73,4
Error in line 25: bQJ7k5r S334 52,4
Error in line 33: SAwW3JaA7SC S716 47,1
Error in line 35: S339 S716 35,8
